crates/compiler/src/tests/e2e/good/0280_closure_values_and_calls/main.gom
fn main() {
    let f: () -> uint8 = || 42;
    println(uint8_to_string(f()));
}
