crates/compiler/src/tests/e2e/bad/0002_closure_not_polymorphic/main.gom
fn main() -> unit {
  let f = |x| x;
  let a = f(1);
  let b = f("hello");
  ()
}
